node port in k8s for dev branch

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ venv/
 target/
 .mvn/
 !**/maven-wrapper.jar
+sa-webapp/.project
+sa-webapp/.classpath
+sa-webapp/.settings/
 
 # IDE ignored files
 .idea/
