--- a/resource-manifests/sa-web-app-deployment.yaml
+++ b/resource-manifests/sa-web-app-deployment.yaml
@@ -21,11 +21,11 @@ spec:
         app: sa-web-app
     spec:
       containers:
-      - image: rinormaloku/sentiment-analysis-web-app
+      - image: freidenker/sentiment-analysis-web-app
         imagePullPolicy: Always
         name: sa-web-app
         env:
           - name: SA_LOGIC_API_URL
-            value: "http://sa-logic"
+            value: "http://logic:5000"
         ports:
           - containerPort: 8080
