--- a/resource-manifests/service-sa-frontend-nodePort.yaml
+++ b/resource-manifests/service-sa-frontend-nodePort.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service              # 1
 metadata:
-  name: sa-frontend-lb
+  name: sa-frontend
 spec:
-  type: LoadBalancer       # 2
+  type: NodePort       # 2
   ports:
   - port: 80               # 3
     protocol: TCP          # 4
