--- a/resource-manifests/service-sa-logic.yaml
+++ b/resource-manifests/service-sa-logic.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sa-logic
+  name: logic
 spec:
   ports:
-    - port: 80
+    - port: 5000
       protocol: TCP
       targetPort: 5000
   selector:
