--- a/resource-manifests/service-sa-web-app.yaml
+++ b/resource-manifests/service-sa-web-app.yaml
@@ -1,11 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sa-web-app-lb
+  name: web
 spec:
-  type: LoadBalancer
   ports:
-  - port: 80
+  - port: 8080
     protocol: TCP
     targetPort: 8080
   selector:
