--- a/resource-manifests/sa-logic-deployment.yaml
+++ b/resource-manifests/sa-logic-deployment.yaml
@@ -21,7 +21,7 @@ spec:
         app: sa-logic
     spec:
       containers:
-        - image: freidenker/sentiment-analysis-logic
+        - image: freidenker/sentiment-analysis-logic:winteringress01
           imagePullPolicy: Always
           name: sa-logic
           ports:
