--- a/resource-manifests/sa-web-app-deployment.yaml
+++ b/resource-manifests/sa-web-app-deployment.yaml
@@ -21,7 +21,7 @@ spec:
         app: sa-web-app
     spec:
       containers:
-      - image: freidenker/sentiment-analysis-web-app
+      - image: freidenker/sentiment-analysis-web-app:winteringress01
         imagePullPolicy: Always
         name: sa-web-app
         env:
