--- a/sa-frontend/package.json
+++ b/sa-frontend/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "dependencies": {
     "material-ui": "^0.20.0",
+    "prop-types": "^15.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "^1.0.17",
-    "prop-types": "latest"
+    "yarn": "^1.22.4"
   },
   "scripts": {
     "start": "react-scripts start",
