fix logic issue

--- a/sa-logic/Dockerfile
+++ b/sa-logic/Dockerfile
@@ -1,11 +1,12 @@
 FROM python:3.6.6-alpine
+RUN apk --update add python py-pip openssl ca-certificates py-openssl wget \
+    && apk --update add --virtual build-dependencies libffi-dev openssl-dev python-dev py-pip build-base \
+    && pip install --upgrade pip
+
 COPY sa /app
 WORKDIR /app
-RUN apk --update add python py-pip openssl ca-certificates py-openssl wget
 
-RUN apk --update add --virtual build-dependencies libffi-dev openssl-dev python-dev py-pip build-base \
-    && pip install --upgrade pip \
-    && pip3 install -r requirements.txt \
+RUN pip3 install -r requirements.txt \
     && python3 -m textblob.download_corpora
 EXPOSE 5000
 ENTRYPOINT ["python3"]
